--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -24,12 +24,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoDocumento" class="control-label"></label>
-                <input asp-for="TipoDocumento" class="form-control" />
+                <select asp-for="TipoDocumento" class="form-control">
+                    <option value="">-- Seleccione un tipo --</option>
+                    <option value="Cedula">Cédula</option>
+                    <option value="Pasaporte">Pasaporte</option>
+                    <option value="Licencia">Licencia</option>
+                </select>
                 <span asp-validation-for="TipoDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NumeroDocumento" class="control-label"></label>
-                <input asp-for="NumeroDocumento" class="form-control" />
+                <input asp-for="NumeroDocumento" type="number" maxlength="11" class="form-control" />
                 <span asp-validation-for="NumeroDocumento" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -54,17 +59,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="CodigoPostal" class="control-label"></label>
-                <input asp-for="CodigoPostal" class="form-control" />
+                <input asp-for="CodigoPostal" type="number" maxlength="5" class="form-control" />
                 <span asp-validation-for="CodigoPostal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TelefonoPrincipal" class="control-label"></label>
-                <input asp-for="TelefonoPrincipal" class="form-control" />
+                <input asp-for="TelefonoPrincipal" type="number" maxlength="10" class="form-control" />
                 <span asp-validation-for="TelefonoPrincipal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TelefonoOpcional" class="control-label"></label>
-                <input asp-for="TelefonoOpcional" class="form-control" />
+                <input asp-for="TelefonoOpcional" type="number" maxlength="10" class="form-control" />
                 <span asp-validation-for="TelefonoOpcional" class="text-danger"></span>
             </div>
             <div class="form-group">
