traduccion al epspaanol de algunas palabras de la ui

--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -8,7 +8,7 @@
 <br />
 <br />
 <p>
-    <a class="crear" asp-action="Create">Create New</a>
+    <a class="crear" asp-action="Create">Nuevo Cliente</a>
 </p>
 <table class="table table-cliente">
     <thead>
@@ -104,9 +104,9 @@
                 @Html.DisplayFor(modelItem => item.NotasAdicionales)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ClienteId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClienteId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClienteId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ClienteId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.ClienteId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.ClienteId">Eliminar</a>
             </td>
         </tr>
 }
