--- a/Views/Prestamos/Create.cshtml
+++ b/Views/Prestamos/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaPrestamos.Models.Prestamo
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Registrar";
 }
 
-<h1>Create</h1>
+<h1>Registrar</h1>
 
 <h4>Prestamo</h4>
 <hr />
@@ -86,7 +86,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">←Volver atras</a>
 </div>
 
 @section Scripts {
