--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaPrestamos.Models.Cliente
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nuevo Cliente";
 }
 
-<h1>Create</h1>
+<h1>Registrar</h1>
 
 <h4>Cliente</h4>
 <hr />
@@ -95,7 +95,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">←Volver atras</a>
 </div>
 
 @section Scripts {
