--- a/Views/Clientes/Delete.cshtml
+++ b/Views/Clientes/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model SistemaPrestamos.Models.Cliente
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cliente</h4>
+    <h3>¿Estás seguro de que deseas eliminar este cliente?</h3>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -100,6 +100,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ClienteId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">←Volver atras</a>
     </form>
 </div>
