--- a/Views/Clientes/Details.cshtml
+++ b/Views/Clientes/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaPrestamos.Models.Cliente
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
-<h1>Details</h1>
+<h1>Detalles del Cliente</h1>
 
 <div>
     <h4>Cliente</h4>
@@ -97,6 +97,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ClienteId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.ClienteId">Editar</a> |
+    <a asp-action="Index">←Volver atras</a>
 </div>
