--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaPrestamos.Models.Cliente
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Cliente</h4>
 <hr />
@@ -91,7 +91,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">←Volver atras</a>
 </div>
 
 @section Scripts {
