--- a/Views/Prestamos/Edit.cshtml
+++ b/Views/Prestamos/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaPrestamos.Models.Prestamo
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Prestamo</h4>
 <hr />
@@ -81,7 +81,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">←Volver atras</a>
 </div>
 
 @section Scripts {
