--- a/Views/Prestamos/Index.cshtml
+++ b/Views/Prestamos/Index.cshtml
@@ -9,7 +9,7 @@
 <br />
 
 <p>
-    <a class="crear" asp-action="Create">Create New</a>
+    <a class="crear" asp-action="Create">Nuevo Prestamo</a>
 </p>
 <table class="table">
     <thead>
@@ -90,12 +90,12 @@
                 @Html.DisplayFor(modelItem => item.TerminosAdicionales)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Apellido)
+                    @Html.DisplayFor(modelItem => item.Cliente.Apellido)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PrestamoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PrestamoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PrestamoId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.PrestamoId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.PrestamoId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.PrestamoId">Eliminar</a>
             </td>
         </tr>
 }
