--- a/Views/RecibosCobro/Index.cshtml
+++ b/Views/RecibosCobro/Index.cshtml
@@ -8,7 +8,7 @@
 <br />
 <br />
 <p>
-    <a class="crear" asp-action="Create">Create New</a>
+    <a class="crear" asp-action="Create">Nuevo Recibo</a>
 </p>
 <table class="table">
     <thead>
@@ -80,9 +80,9 @@
                 @Html.DisplayFor(modelItem => item.Cliente.Apellido)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ReciboCobroId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ReciboCobroId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ReciboCobroId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ReciboCobroId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.ReciboCobroId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.ReciboCobroId">Eliminar</a>
             </td>
         </tr>
 }
