--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,33 +11,36 @@
     <link rel="stylesheet" href="~/SistemaPrestamos.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="sidebar">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-size:1.8em; color:black;font-weight:bold;">Sistema Prestamos<hr /></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="opcion">
-                            <a asp-area="" asp-controller="Home" asp-action="Index">Inicio<br /><br /></a>
-                        </li>
-                        <li class="opcion">
-                            <a asp-area="" asp-controller="Clientes" asp-action="Index">Clientes<br /><br /></a>
-                        </li>
-                        <li class="opcion">
-                            <a asp-area="" asp-controller="Prestamos" asp-action="Index">Préstamos<br /><br /></a>
-                        </li>
-                        <li class="opcion">
-                            <a asp-area="" asp-controller="RecibosCobro" asp-action="Index">Recibos de Cobro</a>
-                        </li>
-                    </ul>
+    @if (!(ViewContext.RouteData.Values["controller"]?.ToString() == "Login"))
+    {
+        <header>
+            <nav class="sidebar">
+                <div class="container-fluid">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="font-size:1.8em; color:black;font-weight:bold;">Sistema Prestamos<hr /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="opcion">
+                                <a asp-area="" asp-controller="Home" asp-action="Index">Inicio<br /><br /></a>
+                            </li>
+                            <li class="opcion">
+                                <a asp-area="" asp-controller="Clientes" asp-action="Index">Clientes<br /><br /></a>
+                            </li>
+                            <li class="opcion">
+                                <a asp-area="" asp-controller="Prestamos" asp-action="Index">Préstamos<br /><br /></a>
+                            </li>
+                            <li class="opcion">
+                                <a asp-area="" asp-controller="RecibosCobro" asp-action="Index">Recibos de Cobro</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
+    }
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -63,7 +66,7 @@
         background-color: lightblue;
         color: white;
         padding: 10px;
-        height: 100vh; /* ocupa toda la altura */
+        height: 100vh;
         position: fixed;
         top: 0;
         left: 0;
